# filmsight

./: .gitignore  ARCHITECTURE.md  BUILD.md  DEVELOPMENT_GUIDE.md  FEATURES.md  LIBRAW_INTEGRATION.md  QUICK_START.md  README.md  WHY_KOTLIN_COMPOSE.md  gradle.properties  settings.gradle.kts
.kiro/specs/performance-and-ui-improvements/: design.md  requirements.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/presets/: film_architecture.json  hongkong_color.json  human.json  japan_color.json  like_film.json  seaside_portrait.json  stars.json  vintage_human.json
app/src/main/cpp/: CMakeLists.txt  bayer_demosaic.cpp  bilateral_filter.cpp  color_crosstalk.cpp  color_temperature.cpp  contrast_adjustment.cpp  dynamic_range_protection.cpp  error_diffusion_dithering.cpp  exposure_adjustment.cpp  film_engine.cpp  film_response_curve.cpp  grain_effect.cpp  grain_model.cpp  hsl_adjust.cpp  image_converter.cpp  image_hash_cache.cpp  image_processor_engine.cpp  jni_bridge.cpp  parallel_processor.cpp  raw_decoder.cpp  raw_processor.cpp  saturation_adjustment.cpp  tone_curve.cpp  vignette_effect.cpp  vulkan_bilateral_filter.cpp
app/src/main/cpp/color/: basic_adjustment_params.h  color_grading.cpp  color_grading.h  color_temperature.h  saturation_adjustment.cpp
app/src/main/cpp/core/: parallel_processor.cpp  parallel_processor.h
app/src/main/cpp/effects/: grain_effect.cpp  grain_effect.h  vignette_effect.cpp
app/src/main/cpp/filters/: bilateral_filter.cpp  bilateral_filter.h  bilateral_filter_optimizer.cpp  bilateral_filter_optimizer.h  fast_bilateral_filter.cpp  fast_bilateral_filter.h
app/src/main/cpp/include/: adobe_tone_adjustment.h  basic_adjustment_params.h  bilateral_filter.h  color_temperature.h  contrast_adjustment.h  dynamic_range_protection.h  error_diffusion_dithering.h  exposure_adjustment.h  film_engine.h  film_params.h  image_converter.h  image_hash_cache.h  image_processor_engine.h  raw_decoder.h  raw_processor.h  saturation_adjustment.h  vignette_effect.h  vulkan_bilateral_filter.h
app/src/main/cpp/jni/: jni_bilateral_filter.cpp  jni_common.h  jni_converter.cpp  jni_image_processor.cpp  jni_parallel_processor.cpp  jni_parameters.cpp  jni_raw_processor.cpp
app/src/main/cpp/raw/: bayer_demosaic.cpp  raw_types.h
app/src/main/cpp/shaders/: README.md  bilateral_filter.comp  compile_shaders.bat  compile_shaders.sh  spv_to_cpp.py
app/src/main/cpp/tone/: adobe_tone_adjustment.cpp  contrast_adjustment.cpp  exposure_adjustment.cpp
app/src/main/java/com/filmtracker/app/: MainActivity.kt
app/src/main/java/com/filmtracker/app/ai/: AIAssistantService.kt  AIModels.kt  AIParameterAdvisor.kt  AIParameterParser.kt  AISettingsManager.kt  BeautyAIAnalyzer.kt  RAGKnowledgeBase.kt  UserPreferences.kt
app/src/main/java/com/filmtracker/app/data/: AssetPresetLoader.kt  BasicAdjustmentParams.kt  FilmParams.kt  Preset.kt  PresetManager.kt
app/src/main/java/com/filmtracker/app/data/mapper/: AdjustmentParamsMapper.kt
app/src/main/java/com/filmtracker/app/data/repository/: ImageRepositoryImpl.kt  MetadataRepositoryImpl.kt  ProcessingRepositoryImpl.kt  SessionRepositoryImpl.kt
app/src/main/java/com/filmtracker/app/domain/error/: DataIntegrityError.kt  FileSystemError.kt
app/src/main/java/com/filmtracker/app/domain/model/: AdjustmentParams.kt  EditHistory.kt  EditSession.kt  FilmFormat.kt  ParameterChange.kt  ParameterMetadata.kt  ProcessingResult.kt
app/src/main/java/com/filmtracker/app/domain/repository/: ImageRepository.kt  MetadataRepository.kt  ProcessingRepository.kt  SessionRepository.kt
app/src/main/java/com/filmtracker/app/domain/usecase/: ApplyAdjustmentsUseCase.kt  ExportImageUseCase.kt  LoadImageUseCase.kt
app/src/main/java/com/filmtracker/app/domain/util/: PresetApplier.kt
app/src/main/java/com/filmtracker/app/native/: BasicAdjustmentParamsNative.kt  BilateralFilterNative.kt  FilmEngineNative.kt  ImageConverterNative.kt  ImageProcessorEngineNative.kt  ParallelProcessorNative.kt  RawMetadataNative.kt  RawProcessorNative.kt
app/src/main/java/com/filmtracker/app/native/wrapper/: BasicAdjustmentParamsNative.kt
app/src/main/java/com/filmtracker/app/processing/: CacheValidityChecker.kt  CloudVisionDepthEstimator.kt  CloudVisionSegmenter.kt  ColorProcessor.kt  CurvesProcessor.kt  DepthEstimator.kt  DetailsProcessor.kt  EffectsProcessor.kt  ExportRenderingPipeline.kt  GeometryProcessor.kt  IncrementalRenderingEngine.kt  LegacyCompatibilityLayer.kt  LruCacheManager.kt  ParameterChangeDetector.kt  ProcessingStage.kt  StageCache.kt  StageConfig.kt  StageParameterMapping.kt  StageProcessor.kt  SubjectSegmenter.kt  ToneBaseProcessor.kt
app/src/main/java/com/filmtracker/app/ui/components/: AISuggestionCard.kt  BeautyPanel.kt  CurveEditor.kt  HSLAdjuster.kt  HistogramView.kt  MarkdownText.kt  MaskOverlay.kt  ParameterSection.kt  ParameterSlider.kt  ResponseCurveControls.kt
app/src/main/java/com/filmtracker/app/ui/navigation/: FilmWorkflowNavigation.kt
app/src/main/java/com/filmtracker/app/ui/screens/: AIAssistantScreen.kt  AIColorScreen.kt  AISettingsScreen.kt  EditPanels.kt  FilmCountSelectionScreen.kt  FilmFormatSelectionScreen.kt  FilmGridPreviewScreen.kt  FilmProcessingScreen.kt  HomeScreen.kt  ImageImportScreen.kt  ImageSelectionScreen.kt  (+2 more)
app/src/main/java/com/filmtracker/app/util/: AdobeParameterConverter.kt  BeautyParamsConverter.kt  ExifHelper.kt  FileHashUtil.kt  ImageExporter.kt  ImageProcessor.kt  LightroomPresetParser.kt  RetryUtil.kt  StorageUtil.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/filmtracker/app/processing/: BilateralFilterConfigStatsTest.kt  CacheConsistencyPropertyTest.kt  IncrementalRenderingEnginePropertyTest.kt  ParameterChangeDetectorPropertyTest.kt
app/src/test/java/com/filmtracker/app/util/: FileHashUtilTest.kt
docs/sample_presets/: cinematic.json  film_vintage.json  japanese_fresh.xmp
presetlr/: Like_film.xmp  film_architecture.xmp  hongkong_color.xmp  human.xmp  japan_color.xmp  seaside_positruit.xmp  stars.xmp  vintage_human.xmp
(+41 files in other folders)
